@@ -1,3 +1,4 @@
+	* fix protocol race-condition in super seeding mode
 	* support read-only DHT nodes
 	* remove unused partial hash DHT lookups
 	* remove potentially privacy leaking extension (non-anonymous mode)
